Prueba endpoint json fe

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 PORT=8086
+MONGODB_CNN=mongodb+srv://user_node_cafe:OS0QvqRYNEd0Xots@clustercafe.rxfbs.mongodb.net/CafeBD
+USER=user_node_cafe
+PASS=OS0QvqRYNEd0Xots
